[gd_scene load_steps=12 format=3 uid="uid://cmh7w7q0u66fs"]

[ext_resource type="PackedScene" uid="uid://dru8shjlmiroj" path="res://enviroment/boundaries/boundaries.tscn" id="1_lfoj8"]
[ext_resource type="PackedScene" uid="uid://diauyr686fq8" path="res://player/player.tscn" id="2_ygwg2"]
[ext_resource type="PackedScene" uid="uid://s7re5t268a3c" path="res://enviroment/boundaries/foul_line.tscn" id="4_tmrkx"]
[ext_resource type="PackedScene" uid="uid://d06lr0grmjxqy" path="res://enviroment/pillar_pyramid.tscn" id="5_2mtjm"]
[ext_resource type="PackedScene" uid="uid://cqv2702roktbm" path="res://entities/ball.tscn" id="5_n7uxm"]
[ext_resource type="Script" path="res://scripts/frame_calculation.gd" id="6_u1bj6"]
[ext_resource type="PackedScene" uid="uid://dborw6l1jokof" path="res://enviroment/score_screen.tscn" id="7_e0xra"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sn5xl"]
roughness = 0.0

[sub_resource type="PlaneMesh" id="PlaneMesh_hucgm"]
material = SubResource("StandardMaterial3D_sn5xl")
size = Vector2(40, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ydlb"]
albedo_color = Color(0.917989, 0.575073, 0.445551, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_16w40"]
points = PackedVector3Array(20.113, -0.112994, 2.18079, -20.113, -0.112994, -2.11299, 20.113, -0.112994, -2.11299, -20.113, -0.112994, 2.18079)

[node name="world" type="Node3D"]

[node name="Boundaries4" parent="." instance=ExtResource("1_lfoj8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2, 0, 0)
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.16964, 0)
sky_mode = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -16.9023)
mesh = SubResource("PlaneMesh_hucgm")
skeleton = NodePath("../DirectionalLight3D")
surface_material_override/0 = SubResource("StandardMaterial3D_3ydlb")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 3.55271e-15, 0, 1, 0, -3.55271e-15, 0, 1, 0, 0, 0)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_16w40")

[node name="Player" parent="." instance=ExtResource("2_ygwg2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.110799, 1.04001, -3.3024)

[node name="Boundaries1" parent="." instance=ExtResource("1_lfoj8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)
visible = false

[node name="Boundaries3" parent="." instance=ExtResource("1_lfoj8")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.0617411, 0, 3)
visible = false

[node name="Boundaries2" parent="." instance=ExtResource("1_lfoj8")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.0617411, 0, -5.00806)
visible = false

[node name="Foul Line" parent="." instance=ExtResource("4_tmrkx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -5.192)

[node name="Ball" parent="." instance=ExtResource("5_n7uxm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.47776, 1.65527)

[node name="pillar_pyramid" parent="." instance=ExtResource("5_2mtjm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.020896, 1.48883, -33.2019)

[node name="frame_calculation" type="Node3D" parent="."]
script = ExtResource("6_u1bj6")

[node name="next_frame_timer" type="Timer" parent="frame_calculation"]
wait_time = 4.5
one_shot = true

[node name="strike_spare_timer" type="Timer" parent="frame_calculation"]
wait_time = 0.2
one_shot = true

[node name="ScoreScreen" parent="." instance=ExtResource("7_e0xra")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.51219, -8.54431)

[connection signal="tree_entered" from="." to="frame_calculation" method="_on_world_tree_entered"]
[connection signal="timeout" from="frame_calculation/next_frame_timer" to="frame_calculation" method="_on_next_frame_timer_timeout"]
[connection signal="timeout" from="frame_calculation/strike_spare_timer" to="frame_calculation" method="_on_strike_spare_timer_timeout"]
